# gridit

./: Cargo.toml  LICENSE.txt  README.md  readme.md
examples/: chess_pawn.rs  gameoflife.rs
examples/board/: board.rs  main.rs  picker.rs
examples/board/piece/: bishop.rs  blocker.rs  custom_one.rs  giraffe.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/: builder.rs  grid.rs  lib.rs  pattern.rs  step.rs
src/grid/: builder.rs  grid.rs  iters.rs  mod.rs  position.rs
src/iter/: column_iter.rs  grid_iter.rs  mod.rs  neighbor_iter.rs  pattern_iter.rs  position_enumerator.rs  position_iter.rs  row_iter.rs
