[package]
name = "gridit"
version = "0.1.0"
authors = ["jomsch <jomsch@jomsch.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
crossterm = "0.19.0"
ggez = "0.6.0-rc1"
#ggez = { git = "https://github.com/ggez/ggez" }
