[package]
name = "gridit"
version = "0.1.0"
authors = ["jomsch <jomsch@jomsch.de>"]
edition = "2018"
description = "2D grid library utilizing the fun of iterators"
repository = "https://github.com/jomsch/gridit"
readme = "README.md"
license = "MIT"
keywords = ["gamedev", "grid", "iterator", "datastruct", "2d"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
crossterm = "0.19.0"
ggez = "0.6.0-rc1"
